--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "@babel/preset-stage-2": "^7.0.0",
     "@babel/register": "^7.0.0",
     "nodemon": "^1.18.10"
+  },
+  "dependencies": {
+    "csvsync": "^1.1.0",
+    "csvtojson": "^2.0.8"
   }
 }
