--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "commander": "^2.19.0",
     "csvsync": "^1.1.0",
-    "csvtojson": "^2.0.8"
+    "csvtojson": "^2.0.8",
+    "express": "^4.16.4"
   }
 }
