--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "commander": "^2.19.0",
     "csvsync": "^1.1.0",
     "csvtojson": "^2.0.8",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
