--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "pg": "^7.9.0",
+    "sequelize": "^5.1.0",
+    "sequelize-cli": "^5.4.0"
   }
 }
