--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "csvtojson": "^2.0.8",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.19",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
