--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "passport-twitter": "^1.0.4",
     "pg": "^7.9.0",
     "sequelize": "^5.1.0",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "swagger": "^0.7.5",
+    "swagger-express-mw": "^0.1.0"
   }
 }
